完成注册验证码功能

--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,8 @@ flask-migrate = "*"
 python-dotenv = "*"
 flask-login = "*"
 bootstrap-flask = "*"
+python-memcached = "*"
+flask-mail = "*"
 
 [dev-packages]
 watchdog = "*"
